reference/5.1/Microsoft.PowerShell.Core/Microsoft.PowerShell.Core.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=390782
Help Version: 5.2.0.0
keywords: powershell,cmdlet
Locale: en-US
Module Guid: 00000000-0000-0000-0000-000000000000
Module Name: Microsoft.PowerShell.Core
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Core
ms.openlocfilehash: 2292aa015ff3471ac7febdda94e1a10e895dea27
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: zh-TW
ms.lasthandoff: 10/07/2020
ms.locfileid: "93206383"
---
# <span data-ttu-id="b6f9e-103">Microsoft.PowerShell.Core 模組</span><span class="sxs-lookup"><span data-stu-id="b6f9e-103">Microsoft.PowerShell.Core Module</span></span>

## <span data-ttu-id="b6f9e-104">描述</span><span class="sxs-lookup"><span data-stu-id="b6f9e-104">Description</span></span>

<span data-ttu-id="b6f9e-105">本章節包含與 PowerShell Microsoft. 核心模組一起安裝之 Cmdlet 的說明主題。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-105">This section contains the help topics for the cmdlets that are installed with PowerShell Microsoft.PowerShell.Core module.</span></span> <span data-ttu-id="b6f9e-106">核心模組包含可管理 PowerShell 基本功能的 Cmdlet 和提供者。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-106">The Core module contains cmdlets and providers that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="b6f9e-107">Microsoft PowerShell Cmdlet</span><span class="sxs-lookup"><span data-stu-id="b6f9e-107">Microsoft.PowerShell.Core Cmdlets</span></span>

### [<span data-ttu-id="b6f9e-108">Add-History</span><span class="sxs-lookup"><span data-stu-id="b6f9e-108">Add-History</span></span>](Add-History.md)
<span data-ttu-id="b6f9e-109">將項目附加至工作階段歷程記錄。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-109">Appends entries to the session history.</span></span>

### [<span data-ttu-id="b6f9e-110">Add-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="b6f9e-110">Add-PSSnapin</span></span>](Add-PSSnapin.md)
<span data-ttu-id="b6f9e-111">新增一或多個 Windows PowerShell 嵌入式管理單元至目前的工作階段。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-111">Adds one or more Windows PowerShell snap-ins to the current session.</span></span>

### [<span data-ttu-id="b6f9e-112">Clear-History</span><span class="sxs-lookup"><span data-stu-id="b6f9e-112">Clear-History</span></span>](Clear-History.md)
<span data-ttu-id="b6f9e-113">從 PowerShell 會話命令歷程記錄中刪除專案。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-113">Deletes entries from the PowerShell session command history.</span></span>

### [<span data-ttu-id="b6f9e-114">Clear-Host</span><span class="sxs-lookup"><span data-stu-id="b6f9e-114">Clear-Host</span></span>](Clear-Host.md)
<span data-ttu-id="b6f9e-115">清除主機程式中的顯示。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-115">Clears the display in the host program.</span></span>

### [<span data-ttu-id="b6f9e-116">Connect-PSSession</span><span class="sxs-lookup"><span data-stu-id="b6f9e-116">Connect-PSSession</span></span>](Connect-PSSession.md)
<span data-ttu-id="b6f9e-117">重新連線至已中斷連線的工作階段。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-117">Reconnects to disconnected sessions.</span></span>

### [<span data-ttu-id="b6f9e-118">Debug-Job</span><span class="sxs-lookup"><span data-stu-id="b6f9e-118">Debug-Job</span></span>](Debug-Job.md)
<span data-ttu-id="b6f9e-119">對執行中的背景、遠端或 Windows PowerShell 工作流程工作進行偵錯。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-119">Debugs a running background, remote, or Windows PowerShell Workflow job.</span></span>

### [<span data-ttu-id="b6f9e-120">Disable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="b6f9e-120">Disable-PSRemoting</span></span>](Disable-PSRemoting.md)
<span data-ttu-id="b6f9e-121">防止 PowerShell 端點接收遠端連線。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-121">Prevents PowerShell endpoints from receiving remote connections.</span></span>

### [<span data-ttu-id="b6f9e-122">Disable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="b6f9e-122">Disable-PSSessionConfiguration</span></span>](Disable-PSSessionConfiguration.md)
<span data-ttu-id="b6f9e-123">停用本機電腦上的工作階段設定。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-123">Disables session configurations on the local computer.</span></span>

### [<span data-ttu-id="b6f9e-124">Disconnect-PSSession</span><span class="sxs-lookup"><span data-stu-id="b6f9e-124">Disconnect-PSSession</span></span>](Disconnect-PSSession.md)
<span data-ttu-id="b6f9e-125">從工作階段中斷連線。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-125">Disconnects from a session.</span></span>

### [<span data-ttu-id="b6f9e-126">Enable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="b6f9e-126">Enable-PSRemoting</span></span>](Enable-PSRemoting.md)
<span data-ttu-id="b6f9e-127">設定電腦接收遠端命令。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-127">Configures the computer to receive remote commands.</span></span>

### [<span data-ttu-id="b6f9e-128">Enable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="b6f9e-128">Enable-PSSessionConfiguration</span></span>](Enable-PSSessionConfiguration.md)
<span data-ttu-id="b6f9e-129">啟用本機電腦上的工作階段設定。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-129">Enables the session configurations on the local computer.</span></span>

### [<span data-ttu-id="b6f9e-130">Enter-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="b6f9e-130">Enter-PSHostProcess</span></span>](Enter-PSHostProcess.md)
<span data-ttu-id="b6f9e-131">連線到互動式工作階段並進入具本機處理程序的互動式工作階段。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-131">Connects to and enters into an interactive session with a local process.</span></span>

### [<span data-ttu-id="b6f9e-132">Enter-PSSession</span><span class="sxs-lookup"><span data-stu-id="b6f9e-132">Enter-PSSession</span></span>](Enter-PSSession.md)
<span data-ttu-id="b6f9e-133">啟動遠端電腦的互動式工作階段。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-133">Starts an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="b6f9e-134">Exit-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="b6f9e-134">Exit-PSHostProcess</span></span>](Exit-PSHostProcess.md)
<span data-ttu-id="b6f9e-135">關閉具有本機進程的互動式會話。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-135">Closes an interactive session with a local process.</span></span>

### [<span data-ttu-id="b6f9e-136">Exit-PSSession</span><span class="sxs-lookup"><span data-stu-id="b6f9e-136">Exit-PSSession</span></span>](Exit-PSSession.md)
<span data-ttu-id="b6f9e-137">結束遠端電腦的互動式工作階段。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-137">Ends an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="b6f9e-138">Export-Console</span><span class="sxs-lookup"><span data-stu-id="b6f9e-138">Export-Console</span></span>](Export-Console.md)
<span data-ttu-id="b6f9e-139">將目前工作階段中的嵌入式管理單元名稱匯出到主控台檔案。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-139">Exports the names of snap-ins in the current session to a console file.</span></span>

### [<span data-ttu-id="b6f9e-140">Export-ModuleMember</span><span class="sxs-lookup"><span data-stu-id="b6f9e-140">Export-ModuleMember</span></span>](Export-ModuleMember.md)
<span data-ttu-id="b6f9e-141">指定要匯出的模組成員。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-141">Specifies the module members that are exported.</span></span>

### [<span data-ttu-id="b6f9e-142">ForEach-Object</span><span class="sxs-lookup"><span data-stu-id="b6f9e-142">ForEach-Object</span></span>](ForEach-Object.md)
<span data-ttu-id="b6f9e-143">針對輸入物件集合中的每個項目執行操作。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-143">Performs an operation against each item in a collection of input objects.</span></span>

### [<span data-ttu-id="b6f9e-144">Get-Command</span><span class="sxs-lookup"><span data-stu-id="b6f9e-144">Get-Command</span></span>](Get-Command.md)
<span data-ttu-id="b6f9e-145">取得所有命令。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-145">Gets all commands.</span></span>

### [<span data-ttu-id="b6f9e-146">Get-Help</span><span class="sxs-lookup"><span data-stu-id="b6f9e-146">Get-Help</span></span>](Get-Help.md)
<span data-ttu-id="b6f9e-147">顯示 PowerShell 命令和概念的相關資訊。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-147">Displays information about PowerShell commands and concepts.</span></span>

### [<span data-ttu-id="b6f9e-148">Get-History</span><span class="sxs-lookup"><span data-stu-id="b6f9e-148">Get-History</span></span>](Get-History.md)
<span data-ttu-id="b6f9e-149">取得目前工作階段期間輸入的命令清單。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-149">Gets a list of the commands entered during the current session.</span></span>

### [<span data-ttu-id="b6f9e-150">Get-Job</span><span class="sxs-lookup"><span data-stu-id="b6f9e-150">Get-Job</span></span>](Get-Job.md)
<span data-ttu-id="b6f9e-151">取得目前會話中正在執行的 PowerShell 背景工作。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-151">Gets PowerShell background jobs that are running in the current session.</span></span>

### [<span data-ttu-id="b6f9e-152">Get-Module</span><span class="sxs-lookup"><span data-stu-id="b6f9e-152">Get-Module</span></span>](Get-Module.md)
<span data-ttu-id="b6f9e-153">取得已匯入或可匯入目前工作階段的模組。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-153">Gets the modules that have been imported or that can be imported into the current session.</span></span>

### [<span data-ttu-id="b6f9e-154">Get-PSHostProcessInfo</span><span class="sxs-lookup"><span data-stu-id="b6f9e-154">Get-PSHostProcessInfo</span></span>](Get-PSHostProcessInfo.md)
<span data-ttu-id="b6f9e-155">取得 PowerShell 主機的相關處理資訊。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-155">Gets process information about the PowerShell host.</span></span>

### [<span data-ttu-id="b6f9e-156">Get-PSSession</span><span class="sxs-lookup"><span data-stu-id="b6f9e-156">Get-PSSession</span></span>](Get-PSSession.md)
<span data-ttu-id="b6f9e-157">取得本機和遠端電腦上的 PowerShell 會話。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-157">Gets the PowerShell sessions on local and remote computers.</span></span>

### [<span data-ttu-id="b6f9e-158">Get-PSSessionCapability</span><span class="sxs-lookup"><span data-stu-id="b6f9e-158">Get-PSSessionCapability</span></span>](Get-PSSessionCapability.md)
<span data-ttu-id="b6f9e-159">取得特定使用者對於限制工作階段設定的能力。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-159">Gets the capabilities of a specific user on a constrained session configuration.</span></span>

### [<span data-ttu-id="b6f9e-160">Get-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="b6f9e-160">Get-PSSessionConfiguration</span></span>](Get-PSSessionConfiguration.md)
<span data-ttu-id="b6f9e-161">取得電腦上已登錄的工作階段設定。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-161">Gets the registered session configurations on the computer.</span></span>

### [<span data-ttu-id="b6f9e-162">Get-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="b6f9e-162">Get-PSSnapin</span></span>](Get-PSSnapin.md)
<span data-ttu-id="b6f9e-163">取得電腦上的 Windows PowerShell 嵌入式管理單元。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-163">Gets the Windows PowerShell snap-ins on the computer.</span></span>

### [<span data-ttu-id="b6f9e-164">Get-Verb</span><span class="sxs-lookup"><span data-stu-id="b6f9e-164">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="b6f9e-165">取得核准的 PowerShell 動詞。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-165">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="b6f9e-166">Import-Module</span><span class="sxs-lookup"><span data-stu-id="b6f9e-166">Import-Module</span></span>](Import-Module.md)
<span data-ttu-id="b6f9e-167">將模組新增到目前的工作階段。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-167">Adds modules to the current session.</span></span>

### [<span data-ttu-id="b6f9e-168">Invoke-Command</span><span class="sxs-lookup"><span data-stu-id="b6f9e-168">Invoke-Command</span></span>](Invoke-Command.md)
<span data-ttu-id="b6f9e-169">在本機與遠端電腦上執行命令。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-169">Runs commands on local and remote computers.</span></span>

### [<span data-ttu-id="b6f9e-170">Invoke-History</span><span class="sxs-lookup"><span data-stu-id="b6f9e-170">Invoke-History</span></span>](Invoke-History.md)
<span data-ttu-id="b6f9e-171">從工作階段歷程記錄執行命令。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-171">Runs commands from the session history.</span></span>

### [<span data-ttu-id="b6f9e-172">New-Module</span><span class="sxs-lookup"><span data-stu-id="b6f9e-172">New-Module</span></span>](New-Module.md)
<span data-ttu-id="b6f9e-173">建立只存在記憶體中的新動態模組。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-173">Creates a new dynamic module that exists only in memory.</span></span>

### [<span data-ttu-id="b6f9e-174">New-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="b6f9e-174">New-ModuleManifest</span></span>](New-ModuleManifest.md)
<span data-ttu-id="b6f9e-175">建立新的模組資訊清單。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-175">Creates a new module manifest.</span></span>

### [<span data-ttu-id="b6f9e-176">New-PSRoleCapabilityFile</span><span class="sxs-lookup"><span data-stu-id="b6f9e-176">New-PSRoleCapabilityFile</span></span>](New-PSRoleCapabilityFile.md)
<span data-ttu-id="b6f9e-177">建立檔案，該檔案會定義要透過會話設定公開的一組功能。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-177">Creates a file that defines a set of capabilities to be exposed through a session configuration.</span></span>

### [<span data-ttu-id="b6f9e-178">New-PSSession</span><span class="sxs-lookup"><span data-stu-id="b6f9e-178">New-PSSession</span></span>](New-PSSession.md)
<span data-ttu-id="b6f9e-179">建立連到本機或遠端電腦的持續連線。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-179">Creates a persistent connection to a local or remote computer.</span></span>

### [<span data-ttu-id="b6f9e-180">New-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="b6f9e-180">New-PSSessionConfigurationFile</span></span>](New-PSSessionConfigurationFile.md)
<span data-ttu-id="b6f9e-181">建立定義工作階段設定的檔案。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-181">Creates a file that defines a session configuration.</span></span>

### [<span data-ttu-id="b6f9e-182">New-PSSessionOption</span><span class="sxs-lookup"><span data-stu-id="b6f9e-182">New-PSSessionOption</span></span>](New-PSSessionOption.md)
<span data-ttu-id="b6f9e-183">建立包含 PSSession 之進階選項的物件。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-183">Creates an object that contains advanced options for a PSSession.</span></span>

### [<span data-ttu-id="b6f9e-184">New-PSTransportOption</span><span class="sxs-lookup"><span data-stu-id="b6f9e-184">New-PSTransportOption</span></span>](New-PSTransportOption.md)
<span data-ttu-id="b6f9e-185">建立包含工作階段設定之進階選項的物件。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-185">Creates an object that contains advanced options for a session configuration.</span></span>

### [<span data-ttu-id="b6f9e-186">Out-Default</span><span class="sxs-lookup"><span data-stu-id="b6f9e-186">Out-Default</span></span>](Out-Default.md)
<span data-ttu-id="b6f9e-187">將輸出傳送到預設的格式器和預設的輸出 Cmdlet。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-187">Sends the output to the default formatter and to the default output cmdlet.</span></span>

### [<span data-ttu-id="b6f9e-188">Out-Host</span><span class="sxs-lookup"><span data-stu-id="b6f9e-188">Out-Host</span></span>](Out-Host.md)
<span data-ttu-id="b6f9e-189">將輸出傳送至命令列。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-189">Sends output to the command line.</span></span>

### [<span data-ttu-id="b6f9e-190">Out-Null</span><span class="sxs-lookup"><span data-stu-id="b6f9e-190">Out-Null</span></span>](Out-Null.md)
<span data-ttu-id="b6f9e-191">隱藏輸出，而不是將它向下傳送或顯示。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-191">Hides the output instead of sending it down the pipeline or displaying it.</span></span>

### [<span data-ttu-id="b6f9e-192">Receive-Job</span><span class="sxs-lookup"><span data-stu-id="b6f9e-192">Receive-Job</span></span>](Receive-Job.md)
<span data-ttu-id="b6f9e-193">取得目前會話中 PowerShell 背景工作的結果。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-193">Gets the results of the PowerShell background jobs in the current session.</span></span>

### [<span data-ttu-id="b6f9e-194">Receive-PSSession</span><span class="sxs-lookup"><span data-stu-id="b6f9e-194">Receive-PSSession</span></span>](Receive-PSSession.md)
<span data-ttu-id="b6f9e-195">取得已中斷連線會話中的命令結果。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-195">Gets results of commands in disconnected sessions.</span></span>

### [<span data-ttu-id="b6f9e-196">Register-ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="b6f9e-196">Register-ArgumentCompleter</span></span>](Register-ArgumentCompleter.md)
<span data-ttu-id="b6f9e-197">註冊自訂引數完成器。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-197">Registers a custom argument completer.</span></span>

### [<span data-ttu-id="b6f9e-198">Register-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="b6f9e-198">Register-PSSessionConfiguration</span></span>](Register-PSSessionConfiguration.md)
<span data-ttu-id="b6f9e-199">建立並登錄新的工作階段設定。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-199">Creates and registers a new session configuration.</span></span>

### [<span data-ttu-id="b6f9e-200">Remove-Job</span><span class="sxs-lookup"><span data-stu-id="b6f9e-200">Remove-Job</span></span>](Remove-Job.md)
<span data-ttu-id="b6f9e-201">刪除 PowerShell 背景工作。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-201">Deletes a PowerShell background job.</span></span>

### [<span data-ttu-id="b6f9e-202">Remove-Module</span><span class="sxs-lookup"><span data-stu-id="b6f9e-202">Remove-Module</span></span>](Remove-Module.md)
<span data-ttu-id="b6f9e-203">移除目前工作階段的模組。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-203">Removes modules from the current session.</span></span>

### [<span data-ttu-id="b6f9e-204">Remove-PSSession</span><span class="sxs-lookup"><span data-stu-id="b6f9e-204">Remove-PSSession</span></span>](Remove-PSSession.md)
<span data-ttu-id="b6f9e-205"> (Pssession) 關閉一或多個 PowerShell 會話。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-205">Closes one or more PowerShell sessions (PSSessions).</span></span>

### [<span data-ttu-id="b6f9e-206">Remove-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="b6f9e-206">Remove-PSSnapin</span></span>](Remove-PSSnapin.md)
<span data-ttu-id="b6f9e-207">從目前的工作階段中移除 Windows PowerShell 嵌入式管理單元。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-207">Removes Windows PowerShell snap-ins from the current session.</span></span>

### [<span data-ttu-id="b6f9e-208">Resume-Job</span><span class="sxs-lookup"><span data-stu-id="b6f9e-208">Resume-Job</span></span>](Resume-Job.md)
<span data-ttu-id="b6f9e-209">重新啟動暫停的工作。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-209">Restarts a suspended job.</span></span>

### [<span data-ttu-id="b6f9e-210">Save-Help</span><span class="sxs-lookup"><span data-stu-id="b6f9e-210">Save-Help</span></span>](Save-Help.md)
<span data-ttu-id="b6f9e-211">下載最新的說明檔並儲存至檔案系統目錄。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-211">Downloads and saves the newest help files to a file system directory.</span></span>

### [<span data-ttu-id="b6f9e-212">Set-PSDebug</span><span class="sxs-lookup"><span data-stu-id="b6f9e-212">Set-PSDebug</span></span>](Set-PSDebug.md)
<span data-ttu-id="b6f9e-213">開啟和關閉指令碼偵錯功能、設定追蹤層級，以及切換 strict 模式。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-213">Turns script debugging features on and off, sets the trace level, and toggles strict mode.</span></span>

### [<span data-ttu-id="b6f9e-214">Set-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="b6f9e-214">Set-PSSessionConfiguration</span></span>](Set-PSSessionConfiguration.md)
<span data-ttu-id="b6f9e-215">變更已登錄的工作階段設定屬性。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-215">Changes the properties of a registered session configuration.</span></span>

### [<span data-ttu-id="b6f9e-216">Set-StrictMode</span><span class="sxs-lookup"><span data-stu-id="b6f9e-216">Set-StrictMode</span></span>](Set-StrictMode.md)
<span data-ttu-id="b6f9e-217">在運算式、指令碼和指令碼區塊中建立並強制執行編碼規則。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-217">Establishes and enforces coding rules in expressions, scripts, and script blocks.</span></span>

### [<span data-ttu-id="b6f9e-218">Start-Job</span><span class="sxs-lookup"><span data-stu-id="b6f9e-218">Start-Job</span></span>](Start-Job.md)
<span data-ttu-id="b6f9e-219">啟動 PowerShell 背景工作。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-219">Starts a PowerShell background job.</span></span>

### [<span data-ttu-id="b6f9e-220">Stop-Job</span><span class="sxs-lookup"><span data-stu-id="b6f9e-220">Stop-Job</span></span>](Stop-Job.md)
<span data-ttu-id="b6f9e-221">停止 PowerShell 背景工作。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-221">Stops a PowerShell background job.</span></span>

### [<span data-ttu-id="b6f9e-222">Suspend-Job</span><span class="sxs-lookup"><span data-stu-id="b6f9e-222">Suspend-Job</span></span>](Suspend-Job.md)
<span data-ttu-id="b6f9e-223">暫時停止工作流程工作。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-223">Temporarily stops workflow jobs.</span></span>

### [<span data-ttu-id="b6f9e-224">Test-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="b6f9e-224">Test-ModuleManifest</span></span>](Test-ModuleManifest.md)
<span data-ttu-id="b6f9e-225">驗證模組資訊清單檔案可精確地說明模組的內容。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-225">Verifies that a module manifest file accurately describes the contents of a module.</span></span>

### [<span data-ttu-id="b6f9e-226">Test-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="b6f9e-226">Test-PSSessionConfigurationFile</span></span>](Test-PSSessionConfigurationFile.md)
<span data-ttu-id="b6f9e-227">驗證工作階段設定檔中的索引鍵和值。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-227">Verifies the keys and values in a session configuration file.</span></span>

### [<span data-ttu-id="b6f9e-228">Unregister-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="b6f9e-228">Unregister-PSSessionConfiguration</span></span>](Unregister-PSSessionConfiguration.md)
<span data-ttu-id="b6f9e-229">從電腦刪除已註冊的工作階段設定。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-229">Deletes registered session configurations from the computer.</span></span>

### [<span data-ttu-id="b6f9e-230">Update-Help</span><span class="sxs-lookup"><span data-stu-id="b6f9e-230">Update-Help</span></span>](Update-Help.md)
<span data-ttu-id="b6f9e-231">下載最新的說明檔並安裝於電腦上。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-231">Downloads and installs the newest help files on your computer.</span></span>

### [<span data-ttu-id="b6f9e-232">Wait-Job</span><span class="sxs-lookup"><span data-stu-id="b6f9e-232">Wait-Job</span></span>](Wait-Job.md)
<span data-ttu-id="b6f9e-233">抑制命令提示字元，直到會話中正在執行的其中一個或所有 PowerShell 背景工作完成為止。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-233">Suppresses the command prompt until one or all of the PowerShell background jobs running in the session are completed.</span></span>

### [<span data-ttu-id="b6f9e-234">Where-Object</span><span class="sxs-lookup"><span data-stu-id="b6f9e-234">Where-Object</span></span>](Where-Object.md)
<span data-ttu-id="b6f9e-235">根據屬性值從集合中選取物件。</span><span class="sxs-lookup"><span data-stu-id="b6f9e-235">Selects objects from a collection based on their property values.</span></span>
