reference/7.0/Microsoft.PowerShell.Core/Microsoft.PowerShell.Core.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=2113534
Help Version: 7.0.1.0
keywords: powershell,cmdlet
Locale: en-US
Module Guid: 00000000-0000-0000-0000-000000000000
Module Name: Microsoft.PowerShell.Core
ms.date: 02/28/2019
schema: 2.0.0
title: Microsoft.PowerShell.Core
ms.openlocfilehash: 839e2590d536cf06b28226f24d3a546a13520ecb
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: zh-TW
ms.lasthandoff: 10/07/2020
ms.locfileid: "93206496"
---
# <span data-ttu-id="5a85b-103">Microsoft.PowerShell.Core 模組</span><span class="sxs-lookup"><span data-stu-id="5a85b-103">Microsoft.PowerShell.Core Module</span></span>

## <span data-ttu-id="5a85b-104">描述</span><span class="sxs-lookup"><span data-stu-id="5a85b-104">Description</span></span>

<span data-ttu-id="5a85b-105">本章節包含與 PowerShell Microsoft. 核心模組一起安裝之 Cmdlet 的說明主題。</span><span class="sxs-lookup"><span data-stu-id="5a85b-105">This section contains the help topics for the cmdlets that are installed with PowerShell Microsoft.PowerShell.Core module.</span></span> <span data-ttu-id="5a85b-106">核心模組包含可管理 PowerShell 基本功能的 Cmdlet 和提供者。</span><span class="sxs-lookup"><span data-stu-id="5a85b-106">The Core module contains cmdlets and providers that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="5a85b-107">Microsoft PowerShell Cmdlet</span><span class="sxs-lookup"><span data-stu-id="5a85b-107">Microsoft.PowerShell.Core Cmdlets</span></span>

### [<span data-ttu-id="5a85b-108">Add-History</span><span class="sxs-lookup"><span data-stu-id="5a85b-108">Add-History</span></span>](Add-History.md)
<span data-ttu-id="5a85b-109">將項目附加至工作階段歷程記錄。</span><span class="sxs-lookup"><span data-stu-id="5a85b-109">Appends entries to the session history.</span></span>

### [<span data-ttu-id="5a85b-110">Clear-History</span><span class="sxs-lookup"><span data-stu-id="5a85b-110">Clear-History</span></span>](Clear-History.md)
<span data-ttu-id="5a85b-111">從 PowerShell 會話命令歷程記錄中刪除專案。</span><span class="sxs-lookup"><span data-stu-id="5a85b-111">Deletes entries from the PowerShell session command history.</span></span>

### [<span data-ttu-id="5a85b-112">Clear-Host</span><span class="sxs-lookup"><span data-stu-id="5a85b-112">Clear-Host</span></span>](Clear-Host.md)
<span data-ttu-id="5a85b-113">清除主機程式中的顯示。</span><span class="sxs-lookup"><span data-stu-id="5a85b-113">Clears the display in the host program.</span></span>

### [<span data-ttu-id="5a85b-114">Connect-PSSession</span><span class="sxs-lookup"><span data-stu-id="5a85b-114">Connect-PSSession</span></span>](Connect-PSSession.md)
<span data-ttu-id="5a85b-115">重新連線至已中斷連線的工作階段。</span><span class="sxs-lookup"><span data-stu-id="5a85b-115">Reconnects to disconnected sessions.</span></span>

### [<span data-ttu-id="5a85b-116">Debug-Job</span><span class="sxs-lookup"><span data-stu-id="5a85b-116">Debug-Job</span></span>](Debug-Job.md)
<span data-ttu-id="5a85b-117">調試執行中的背景、遠端或 PowerShell 工作流程工作。</span><span class="sxs-lookup"><span data-stu-id="5a85b-117">Debugs a running background, remote, or PowerShell Workflow job.</span></span>

### [<span data-ttu-id="5a85b-118">Disable-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="5a85b-118">Disable-ExperimentalFeature</span></span>](Disable-ExperimentalFeature.md)
<span data-ttu-id="5a85b-119">在啟動新的 PowerShell 實例時停用實驗性功能。</span><span class="sxs-lookup"><span data-stu-id="5a85b-119">Disable an experimental feature on startup of new instance of PowerShell.</span></span>

### [<span data-ttu-id="5a85b-120">Disable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="5a85b-120">Disable-PSRemoting</span></span>](Disable-PSRemoting.md)
<span data-ttu-id="5a85b-121">防止 PowerShell 端點接收遠端連線。</span><span class="sxs-lookup"><span data-stu-id="5a85b-121">Prevents PowerShell endpoints from receiving remote connections.</span></span>

### [<span data-ttu-id="5a85b-122">Disable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="5a85b-122">Disable-PSSessionConfiguration</span></span>](Disable-PSSessionConfiguration.md)
<span data-ttu-id="5a85b-123">停用本機電腦上的工作階段設定。</span><span class="sxs-lookup"><span data-stu-id="5a85b-123">Disables session configurations on the local computer.</span></span>

### [<span data-ttu-id="5a85b-124">Disconnect-PSSession</span><span class="sxs-lookup"><span data-stu-id="5a85b-124">Disconnect-PSSession</span></span>](Disconnect-PSSession.md)
<span data-ttu-id="5a85b-125">從工作階段中斷連線。</span><span class="sxs-lookup"><span data-stu-id="5a85b-125">Disconnects from a session.</span></span>

### [<span data-ttu-id="5a85b-126">Enable-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="5a85b-126">Enable-ExperimentalFeature</span></span>](Enable-ExperimentalFeature.md)
<span data-ttu-id="5a85b-127">啟用新的 PowerShell 實例啟動時的實驗性功能。</span><span class="sxs-lookup"><span data-stu-id="5a85b-127">Enable an experimental feature on startup of new instance of PowerShell.</span></span>

### [<span data-ttu-id="5a85b-128">Enable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="5a85b-128">Enable-PSRemoting</span></span>](Enable-PSRemoting.md)
<span data-ttu-id="5a85b-129">設定電腦接收遠端命令。</span><span class="sxs-lookup"><span data-stu-id="5a85b-129">Configures the computer to receive remote commands.</span></span>

### [<span data-ttu-id="5a85b-130">Enable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="5a85b-130">Enable-PSSessionConfiguration</span></span>](Enable-PSSessionConfiguration.md)
<span data-ttu-id="5a85b-131">啟用本機電腦上的工作階段設定。</span><span class="sxs-lookup"><span data-stu-id="5a85b-131">Enables the session configurations on the local computer.</span></span>

### [<span data-ttu-id="5a85b-132">Enter-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="5a85b-132">Enter-PSHostProcess</span></span>](Enter-PSHostProcess.md)
<span data-ttu-id="5a85b-133">連線到互動式工作階段並進入具本機處理程序的互動式工作階段。</span><span class="sxs-lookup"><span data-stu-id="5a85b-133">Connects to and enters into an interactive session with a local process.</span></span>

### [<span data-ttu-id="5a85b-134">Enter-PSSession</span><span class="sxs-lookup"><span data-stu-id="5a85b-134">Enter-PSSession</span></span>](Enter-PSSession.md)
<span data-ttu-id="5a85b-135">啟動遠端電腦的互動式工作階段。</span><span class="sxs-lookup"><span data-stu-id="5a85b-135">Starts an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="5a85b-136">Exit-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="5a85b-136">Exit-PSHostProcess</span></span>](Exit-PSHostProcess.md)
<span data-ttu-id="5a85b-137">關閉具有本機進程的互動式會話。</span><span class="sxs-lookup"><span data-stu-id="5a85b-137">Closes an interactive session with a local process.</span></span>

### [<span data-ttu-id="5a85b-138">Exit-PSSession</span><span class="sxs-lookup"><span data-stu-id="5a85b-138">Exit-PSSession</span></span>](Exit-PSSession.md)
<span data-ttu-id="5a85b-139">結束遠端電腦的互動式工作階段。</span><span class="sxs-lookup"><span data-stu-id="5a85b-139">Ends an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="5a85b-140">Export-ModuleMember</span><span class="sxs-lookup"><span data-stu-id="5a85b-140">Export-ModuleMember</span></span>](Export-ModuleMember.md)
<span data-ttu-id="5a85b-141">指定要匯出的模組成員。</span><span class="sxs-lookup"><span data-stu-id="5a85b-141">Specifies the module members that are exported.</span></span>

### [<span data-ttu-id="5a85b-142">ForEach-Object</span><span class="sxs-lookup"><span data-stu-id="5a85b-142">ForEach-Object</span></span>](ForEach-Object.md)
<span data-ttu-id="5a85b-143">針對輸入物件集合中的每個項目執行操作。</span><span class="sxs-lookup"><span data-stu-id="5a85b-143">Performs an operation against each item in a collection of input objects.</span></span>

### [<span data-ttu-id="5a85b-144">Get-Command</span><span class="sxs-lookup"><span data-stu-id="5a85b-144">Get-Command</span></span>](Get-Command.md)
<span data-ttu-id="5a85b-145">取得所有命令。</span><span class="sxs-lookup"><span data-stu-id="5a85b-145">Gets all commands.</span></span>

### [<span data-ttu-id="5a85b-146">Get-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="5a85b-146">Get-ExperimentalFeature</span></span>](Get-ExperimentalFeature.md)
<span data-ttu-id="5a85b-147">取得實驗性功能。</span><span class="sxs-lookup"><span data-stu-id="5a85b-147">Gets experimental features.</span></span>

### [<span data-ttu-id="5a85b-148">Get-Help</span><span class="sxs-lookup"><span data-stu-id="5a85b-148">Get-Help</span></span>](Get-Help.md)
<span data-ttu-id="5a85b-149">顯示 PowerShell 命令和概念的相關資訊。</span><span class="sxs-lookup"><span data-stu-id="5a85b-149">Displays information about PowerShell commands and concepts.</span></span>

### [<span data-ttu-id="5a85b-150">Get-History</span><span class="sxs-lookup"><span data-stu-id="5a85b-150">Get-History</span></span>](Get-History.md)
<span data-ttu-id="5a85b-151">取得目前工作階段期間輸入的命令清單。</span><span class="sxs-lookup"><span data-stu-id="5a85b-151">Gets a list of the commands entered during the current session.</span></span>

### [<span data-ttu-id="5a85b-152">Get-Job</span><span class="sxs-lookup"><span data-stu-id="5a85b-152">Get-Job</span></span>](Get-Job.md)
<span data-ttu-id="5a85b-153">取得目前會話中正在執行的 PowerShell 背景工作。</span><span class="sxs-lookup"><span data-stu-id="5a85b-153">Gets PowerShell background jobs that are running in the current session.</span></span>

### [<span data-ttu-id="5a85b-154">Get-Module</span><span class="sxs-lookup"><span data-stu-id="5a85b-154">Get-Module</span></span>](Get-Module.md)
<span data-ttu-id="5a85b-155">取得已匯入或可匯入目前工作階段的模組。</span><span class="sxs-lookup"><span data-stu-id="5a85b-155">Gets the modules that have been imported or that can be imported into the current session.</span></span>

### [<span data-ttu-id="5a85b-156">Get-PSHostProcessInfo</span><span class="sxs-lookup"><span data-stu-id="5a85b-156">Get-PSHostProcessInfo</span></span>](Get-PSHostProcessInfo.md)
<span data-ttu-id="5a85b-157">取得 PowerShell 主機的相關處理資訊。</span><span class="sxs-lookup"><span data-stu-id="5a85b-157">Gets process information about the PowerShell host.</span></span>

### [<span data-ttu-id="5a85b-158">Get-PSSession</span><span class="sxs-lookup"><span data-stu-id="5a85b-158">Get-PSSession</span></span>](Get-PSSession.md)
<span data-ttu-id="5a85b-159">取得本機和遠端電腦上的 PowerShell 會話。</span><span class="sxs-lookup"><span data-stu-id="5a85b-159">Gets the PowerShell sessions on local and remote computers.</span></span>

### [<span data-ttu-id="5a85b-160">Get-PSSessionCapability</span><span class="sxs-lookup"><span data-stu-id="5a85b-160">Get-PSSessionCapability</span></span>](Get-PSSessionCapability.md)
<span data-ttu-id="5a85b-161">取得特定使用者對於限制工作階段設定的能力。</span><span class="sxs-lookup"><span data-stu-id="5a85b-161">Gets the capabilities of a specific user on a constrained session configuration.</span></span>

### [<span data-ttu-id="5a85b-162">Get-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="5a85b-162">Get-PSSessionConfiguration</span></span>](Get-PSSessionConfiguration.md)
<span data-ttu-id="5a85b-163">取得電腦上已登錄的工作階段設定。</span><span class="sxs-lookup"><span data-stu-id="5a85b-163">Gets the registered session configurations on the computer.</span></span>

### [<span data-ttu-id="5a85b-164">Import-Module</span><span class="sxs-lookup"><span data-stu-id="5a85b-164">Import-Module</span></span>](Import-Module.md)
<span data-ttu-id="5a85b-165">將模組新增到目前的工作階段。</span><span class="sxs-lookup"><span data-stu-id="5a85b-165">Adds modules to the current session.</span></span>

### [<span data-ttu-id="5a85b-166">Invoke-Command</span><span class="sxs-lookup"><span data-stu-id="5a85b-166">Invoke-Command</span></span>](Invoke-Command.md)
<span data-ttu-id="5a85b-167">在本機與遠端電腦上執行命令。</span><span class="sxs-lookup"><span data-stu-id="5a85b-167">Runs commands on local and remote computers.</span></span>

### [<span data-ttu-id="5a85b-168">Invoke-History</span><span class="sxs-lookup"><span data-stu-id="5a85b-168">Invoke-History</span></span>](Invoke-History.md)
<span data-ttu-id="5a85b-169">從工作階段歷程記錄執行命令。</span><span class="sxs-lookup"><span data-stu-id="5a85b-169">Runs commands from the session history.</span></span>

### [<span data-ttu-id="5a85b-170">New-Module</span><span class="sxs-lookup"><span data-stu-id="5a85b-170">New-Module</span></span>](New-Module.md)
<span data-ttu-id="5a85b-171">建立只存在記憶體中的新動態模組。</span><span class="sxs-lookup"><span data-stu-id="5a85b-171">Creates a new dynamic module that exists only in memory.</span></span>

### [<span data-ttu-id="5a85b-172">New-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="5a85b-172">New-ModuleManifest</span></span>](New-ModuleManifest.md)
<span data-ttu-id="5a85b-173">建立新的模組資訊清單。</span><span class="sxs-lookup"><span data-stu-id="5a85b-173">Creates a new module manifest.</span></span>

### [<span data-ttu-id="5a85b-174">New-PSRoleCapabilityFile</span><span class="sxs-lookup"><span data-stu-id="5a85b-174">New-PSRoleCapabilityFile</span></span>](New-PSRoleCapabilityFile.md)
<span data-ttu-id="5a85b-175">建立檔案，該檔案會定義要透過會話設定公開的一組功能。</span><span class="sxs-lookup"><span data-stu-id="5a85b-175">Creates a file that defines a set of capabilities to be exposed through a session configuration.</span></span>

### [<span data-ttu-id="5a85b-176">New-PSSession</span><span class="sxs-lookup"><span data-stu-id="5a85b-176">New-PSSession</span></span>](New-PSSession.md)
<span data-ttu-id="5a85b-177">建立連到本機或遠端電腦的持續連線。</span><span class="sxs-lookup"><span data-stu-id="5a85b-177">Creates a persistent connection to a local or remote computer.</span></span>

### [<span data-ttu-id="5a85b-178">New-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="5a85b-178">New-PSSessionConfigurationFile</span></span>](New-PSSessionConfigurationFile.md)
<span data-ttu-id="5a85b-179">建立定義工作階段設定的檔案。</span><span class="sxs-lookup"><span data-stu-id="5a85b-179">Creates a file that defines a session configuration.</span></span>

### [<span data-ttu-id="5a85b-180">New-PSSessionOption</span><span class="sxs-lookup"><span data-stu-id="5a85b-180">New-PSSessionOption</span></span>](New-PSSessionOption.md)
<span data-ttu-id="5a85b-181">建立包含 PSSession 之進階選項的物件。</span><span class="sxs-lookup"><span data-stu-id="5a85b-181">Creates an object that contains advanced options for a PSSession.</span></span>

### [<span data-ttu-id="5a85b-182">New-PSTransportOption</span><span class="sxs-lookup"><span data-stu-id="5a85b-182">New-PSTransportOption</span></span>](New-PSTransportOption.md)
<span data-ttu-id="5a85b-183">建立包含工作階段設定之進階選項的物件。</span><span class="sxs-lookup"><span data-stu-id="5a85b-183">Creates an object that contains advanced options for a session configuration.</span></span>

### [<span data-ttu-id="5a85b-184">Out-Default</span><span class="sxs-lookup"><span data-stu-id="5a85b-184">Out-Default</span></span>](Out-Default.md)
<span data-ttu-id="5a85b-185">將輸出傳送到預設的格式器和預設的輸出 Cmdlet。</span><span class="sxs-lookup"><span data-stu-id="5a85b-185">Sends the output to the default formatter and to the default output cmdlet.</span></span>

### [<span data-ttu-id="5a85b-186">Out-Host</span><span class="sxs-lookup"><span data-stu-id="5a85b-186">Out-Host</span></span>](Out-Host.md)
<span data-ttu-id="5a85b-187">將輸出傳送至命令列。</span><span class="sxs-lookup"><span data-stu-id="5a85b-187">Sends output to the command line.</span></span>

### [<span data-ttu-id="5a85b-188">Out-Null</span><span class="sxs-lookup"><span data-stu-id="5a85b-188">Out-Null</span></span>](Out-Null.md)
<span data-ttu-id="5a85b-189">隱藏輸出，而不是將它向下傳送或顯示。</span><span class="sxs-lookup"><span data-stu-id="5a85b-189">Hides the output instead of sending it down the pipeline or displaying it.</span></span>

### [<span data-ttu-id="5a85b-190">Receive-Job</span><span class="sxs-lookup"><span data-stu-id="5a85b-190">Receive-Job</span></span>](Receive-Job.md)
<span data-ttu-id="5a85b-191">取得目前會話中 PowerShell 背景工作的結果。</span><span class="sxs-lookup"><span data-stu-id="5a85b-191">Gets the results of the PowerShell background jobs in the current session.</span></span>

### [<span data-ttu-id="5a85b-192">Receive-PSSession</span><span class="sxs-lookup"><span data-stu-id="5a85b-192">Receive-PSSession</span></span>](Receive-PSSession.md)
<span data-ttu-id="5a85b-193">針對已中斷連線的工作階段取得其命令結果</span><span class="sxs-lookup"><span data-stu-id="5a85b-193">Gets results of commands in disconnected sessions</span></span>

### [<span data-ttu-id="5a85b-194">Register-ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="5a85b-194">Register-ArgumentCompleter</span></span>](Register-ArgumentCompleter.md)
<span data-ttu-id="5a85b-195">註冊自訂引數完成器。</span><span class="sxs-lookup"><span data-stu-id="5a85b-195">Registers a custom argument completer.</span></span>

### [<span data-ttu-id="5a85b-196">Register-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="5a85b-196">Register-PSSessionConfiguration</span></span>](Register-PSSessionConfiguration.md)
<span data-ttu-id="5a85b-197">建立並登錄新的工作階段設定。</span><span class="sxs-lookup"><span data-stu-id="5a85b-197">Creates and registers a new session configuration.</span></span>

### [<span data-ttu-id="5a85b-198">Remove-Job</span><span class="sxs-lookup"><span data-stu-id="5a85b-198">Remove-Job</span></span>](Remove-Job.md)
<span data-ttu-id="5a85b-199">刪除 PowerShell 背景工作。</span><span class="sxs-lookup"><span data-stu-id="5a85b-199">Deletes a PowerShell background job.</span></span>

### [<span data-ttu-id="5a85b-200">Remove-Module</span><span class="sxs-lookup"><span data-stu-id="5a85b-200">Remove-Module</span></span>](Remove-Module.md)
<span data-ttu-id="5a85b-201">移除目前工作階段的模組。</span><span class="sxs-lookup"><span data-stu-id="5a85b-201">Removes modules from the current session.</span></span>

### [<span data-ttu-id="5a85b-202">Remove-PSSession</span><span class="sxs-lookup"><span data-stu-id="5a85b-202">Remove-PSSession</span></span>](Remove-PSSession.md)
<span data-ttu-id="5a85b-203"> (Pssession) 關閉一或多個 PowerShell 會話。</span><span class="sxs-lookup"><span data-stu-id="5a85b-203">Closes one or more PowerShell sessions (PSSessions).</span></span>

### [<span data-ttu-id="5a85b-204">Save-Help</span><span class="sxs-lookup"><span data-stu-id="5a85b-204">Save-Help</span></span>](Save-Help.md)
<span data-ttu-id="5a85b-205">下載最新的說明檔並儲存至檔案系統目錄。</span><span class="sxs-lookup"><span data-stu-id="5a85b-205">Downloads and saves the newest help files to a file system directory.</span></span>

### [<span data-ttu-id="5a85b-206">Set-PSDebug</span><span class="sxs-lookup"><span data-stu-id="5a85b-206">Set-PSDebug</span></span>](Set-PSDebug.md)
<span data-ttu-id="5a85b-207">開啟和關閉指令碼偵錯功能、設定追蹤層級，以及切換 strict 模式。</span><span class="sxs-lookup"><span data-stu-id="5a85b-207">Turns script debugging features on and off, sets the trace level, and toggles strict mode.</span></span>

### [<span data-ttu-id="5a85b-208">Set-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="5a85b-208">Set-PSSessionConfiguration</span></span>](Set-PSSessionConfiguration.md)
<span data-ttu-id="5a85b-209">變更已登錄的工作階段設定屬性。</span><span class="sxs-lookup"><span data-stu-id="5a85b-209">Changes the properties of a registered session configuration.</span></span>

### [<span data-ttu-id="5a85b-210">Set-StrictMode</span><span class="sxs-lookup"><span data-stu-id="5a85b-210">Set-StrictMode</span></span>](Set-StrictMode.md)
<span data-ttu-id="5a85b-211">在運算式、指令碼和指令碼區塊中建立並強制執行編碼規則。</span><span class="sxs-lookup"><span data-stu-id="5a85b-211">Establishes and enforces coding rules in expressions, scripts, and script blocks.</span></span>

### [<span data-ttu-id="5a85b-212">Start-Job</span><span class="sxs-lookup"><span data-stu-id="5a85b-212">Start-Job</span></span>](Start-Job.md)
<span data-ttu-id="5a85b-213">啟動 PowerShell 背景工作。</span><span class="sxs-lookup"><span data-stu-id="5a85b-213">Starts a PowerShell background job.</span></span>

### [<span data-ttu-id="5a85b-214">Stop-Job</span><span class="sxs-lookup"><span data-stu-id="5a85b-214">Stop-Job</span></span>](Stop-Job.md)
<span data-ttu-id="5a85b-215">停止 PowerShell 背景工作。</span><span class="sxs-lookup"><span data-stu-id="5a85b-215">Stops a PowerShell background job.</span></span>

### [<span data-ttu-id="5a85b-216">Test-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="5a85b-216">Test-ModuleManifest</span></span>](Test-ModuleManifest.md)
<span data-ttu-id="5a85b-217">驗證模組資訊清單檔案可精確地說明模組的內容。</span><span class="sxs-lookup"><span data-stu-id="5a85b-217">Verifies that a module manifest file accurately describes the contents of a module.</span></span>

### [<span data-ttu-id="5a85b-218">Test-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="5a85b-218">Test-PSSessionConfigurationFile</span></span>](Test-PSSessionConfigurationFile.md)
<span data-ttu-id="5a85b-219">驗證工作階段設定檔中的索引鍵和值。</span><span class="sxs-lookup"><span data-stu-id="5a85b-219">Verifies the keys and values in a session configuration file.</span></span>

### [<span data-ttu-id="5a85b-220">Unregister-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="5a85b-220">Unregister-PSSessionConfiguration</span></span>](Unregister-PSSessionConfiguration.md)
<span data-ttu-id="5a85b-221">從電腦刪除已註冊的工作階段設定。</span><span class="sxs-lookup"><span data-stu-id="5a85b-221">Deletes registered session configurations from the computer.</span></span>

### [<span data-ttu-id="5a85b-222">Update-Help</span><span class="sxs-lookup"><span data-stu-id="5a85b-222">Update-Help</span></span>](Update-Help.md)
<span data-ttu-id="5a85b-223">下載最新的說明檔並安裝於電腦上。</span><span class="sxs-lookup"><span data-stu-id="5a85b-223">Downloads and installs the newest help files on your computer.</span></span>

### [<span data-ttu-id="5a85b-224">Wait-Job</span><span class="sxs-lookup"><span data-stu-id="5a85b-224">Wait-Job</span></span>](Wait-Job.md)
<span data-ttu-id="5a85b-225">抑制命令提示字元，直到會話中正在執行的其中一個或所有 PowerShell 背景工作完成為止。</span><span class="sxs-lookup"><span data-stu-id="5a85b-225">Suppresses the command prompt until one or all of the PowerShell background jobs running in the session are completed.</span></span>

### [<span data-ttu-id="5a85b-226">Where-Object</span><span class="sxs-lookup"><span data-stu-id="5a85b-226">Where-Object</span></span>](Where-Object.md)
<span data-ttu-id="5a85b-227">根據屬性值從集合中選取物件。</span><span class="sxs-lookup"><span data-stu-id="5a85b-227">Selects objects from a collection based on their property values.</span></span>
